Added winrate bar to transactions and switched RNG method
The transactions page now has a winrate bar that displays the percentage of wins and losses you have.
The method used to generate a random number to determine the winner has been switched from random_int to mt_rand, maybe now it will be more consistent.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,3 +65,13 @@ main {
   color: var(--bs-orange);
 }
 
+#win-bar {
+  min-width: 240px;
+  position: absolute;
+  width: 20%;
+  margin-left: auto;
+  margin-right: 0;
+  right: 10%;
+  top: 15%;
+}
+
